Added Prefs and cleaned MainActivity

--- a/eclipse/res/menu/main.xml
+++ b/eclipse/res/menu/main.xml
@@ -4,9 +4,9 @@
     tools:context="com.softmaybe.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_save"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:title="@string/action_save"
+        app:showAsAction="always"/>
 
 </menu>
