Added basic app flow

--- a/eclipse/res/layout/activity_main.xml
+++ b/eclipse/res/layout/activity_main.xml
@@ -12,19 +12,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
+            <TextView
+                android:id="@+id/event_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentRight="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/default_event_text"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
             <EditText
-                android:id="@+id/emailInput"
+                android:id="@+id/email_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="20dp"
+                android:layout_below="@+id/event_text"
                 android:ems="10"
-                android:inputType="textEmailAddress" >
-
-                <requestFocus />
-            </EditText>
-
+                android:hint="Email to remind"
+                android:inputType="textEmailAddress" />
         </RelativeLayout>
 
 </FrameLayout>
